--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 /* Font Awesome */
 .fas {
   padding-right: 0.3em;
@@ -45,6 +52,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 
 /* Botones */
 #crear-btn {
