--- a/public/assets/styles/dashboard.css
+++ b/public/assets/styles/dashboard.css
@@ -4,17 +4,17 @@
   justify-content: flex-start;
   background-color: #ff4500;
   color: white;
-  padding: 1em 2em;
+  padding: 0.5em 1em;
 }
 
 #dashboard-header .logo {
-  height: 50px;
+  height: 3em;
 }
 
 #dashboard-header h1 {
   margin: 0;
   font-size: 3em;
-  padding-left: .3em;
+  padding-left: 0.15em;
   font-family: "Roboto Slab", sans-serif;
 }
 
@@ -28,26 +28,26 @@
 
 .card {
   background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-  width: 200px;
-  margin: 20px;
+  border-radius: 0.625em;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.1);
+  width: 12.5em;
+  margin: 1.25em;
   text-align: center;
   cursor: pointer;
   transition: transform 0.2s;
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-0.3125em);
 }
 
 .card-img {
   width: 100%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 0.625em;
+  border-top-right-radius: 0.625em;
 }
 
 .card h2 {
-  margin: 10px 0;
-  font-size: 18px;
+  margin: 0.625em 0;
+  font-size: 1.125em;
 }
