--- a/public/index.css
+++ b/public/index.css
@@ -1,92 +1,202 @@
-* {
+:root {
+  /* colores */
+  --color-primario: #e30707;
+  --color-secundario: #ffd041;
+  --claro: #f6f6f6;
+  --oscuro: #ff8153;
+
+
+  h1 {
+    font-size: 2.6rem;
+    line-height: 2.5rem;
+    letter-spacing: -0.05rem;
+    margin: 0;
+    text-align: center;
+  }
+
+  h2 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+
+  /* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+ */
+  /* Font Awesome */
+  .fas {
+    padding-right: 0.3em;
+  }
 
-/* Font Awesome */
-.fas {
-  padding-right: 0.3em;
-}
+  /* CRUD Body */
+  .crud-body {
+    font-family: Arial, sans-serif;
+    background-color: #074990;
+    padding: 1.5em;
+    margin: 0;
+  }
 
-/* CRUD Body */
-.crud-body {
-  font-family: Arial, sans-serif;
-  background-color: #074990;
-  padding: 1.5em;
-  margin: 0;
-}
+  /* CRUD Container */
+  .crud-container {
+    width: 60vw;
+    padding: 3em;
+    margin: auto;
+    background: #fff;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+  }
 
-/* CRUD Container */
-.crud-container {
-  width: 60vw;
-  padding: 3em;
-  margin: auto;
-  background: #fff;
-  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
-}
+  /* CRUD Tabla */
+  .crud-tabla {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1.5em;
+  }
 
-/* CRUD Tabla */
-.crud-tabla {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 1.5em;
-}
+  .crud-tabla,
+  .crud-tabla-th,
+  .crud-tabla-td {
+    border: 0.1em solid #ddd;
+    padding: 1.2em;
+    text-align: left;
+  }
 
-.crud-tabla,
-.crud-tabla-th,
-.crud-tabla-td {
-  border: 0.1em solid #ddd;
-  padding: 1.2em;
-  text-align: left;
-}
+  .crud-tabla-th {
+    background-color: #f2f2f2;
+  }
 
-.crud-tabla-th {
-  background-color: #f2f2f2;
-}
-
-/* Nav */
-.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
+  /* Nav */
+  .navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 
 
-/* Botones */
-#crear-btn {
-  background-color: #0056b3;
-}
+  /* Botones */
+  #crear-btn {
+    background-color: #0056b3;
+  }
 
-#eliminar-btn {
-  background-color: #e25c50;
-}
+  #eliminar-btn {
+    background-color: #e25c50;
+  }
 
-#modificar-btn {
-  background-color: #70c87d;
-  color: #2d2d2d;
-}
+  #modificar-btn {
+    background-color: #70c87d;
+    color: #2d2d2d;
+  }
 
-#volver-btn {
-  background-color: #eeee6c;
-  color: #2d2d2d;
-}
+  #volver-btn {
+    background-color: #eeee6c;
+    color: #2d2d2d;
+  }
 
-.navbar-btn {
-  border-radius: 2em;
-  font-size: 1em;
-  padding: 0.6em 1.4em;
-  margin: 2em 0.5em;
-  border: none;
-  color: #ffffff;
-}
+  .navbar-btn {
+    border-radius: 2em;
+    font-size: 1em;
+    padding: 0.6em 1.4em;
+    margin: 2em 0.5em;
+    border: none;
+    color: #ffffff;
+  }
 
-.table-btn {
-  font-size: 1em;
-  border-radius: 2em;
-  padding: 0.6em 1.4em;
-  width: 100%;
-  border: none;
-  color: #2d2d2d;
+  .table-btn {
+    font-size: 1em;
+    border-radius: 2em;
+    padding: 0.6em 1.4em;
+    width: 100%;
+    border: none;
+    color: #2d2d2d;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+    justify-content: center;
+  }
+
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    /* overflow: hidden; */
+  }
+
+  .card {
+    background-color: var(--claro);
+    overflow: hidden;
+    border-radius: 1rem;
+    box-shadow: 0.2rem 0.2rem 2rem var(--oscuro);
+    max-width: 90%;
+    max-height: 90%;
+    transition: .5s;
+  }
+
+  .card h3 {
+    padding: 8px;
+    color: var(--claro);
+    background: var(--oscuro);
+    text-align: center;
+    font-size: 1.2rem;
+    margin: 0;
+  }
+
+  .card img {
+    width: 100%;
+    height: 10rem;
+    object-fit: cover;
+    transition: .2s;
+  }
+
+  .card:hover img {
+    opacity: .7;
+    /* transform: translateY(0); */
+  }
+
+  .card .detalle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1rem 1rem 4rem;
+    border-radius: 0 0 2rem 2rem;
+  }
+
+  .card .detalle ul {
+    margin: 0;
+    text-align: start;
+  }
+
+  .card .detalle p {
+    margin-top: 1rem;
+    font-size: 0.7rem;
+  }
+
+  .card .detalle a {
+    font-size: 0.8rem;
+    margin: 1rem;
+    text-decoration: none;
+    color: var(--oscuro);
+    padding: 0.4rem 1rem;
+    background-color: var(--claro);
+    border: 0.2rem solid var(--oscuro);
+    border-radius: 5rem;
+    transition: 0.3s;
+    text-align: center;
+  }
+
+  .card a:hover {
+    background-color: var(--color-secundario);
+    text-decoration: underline;
+    text-align: center;
+  }
 }
