--- a/public/assets/styles/dashboard.css
+++ b/public/assets/styles/dashboard.css
@@ -1,7 +1,7 @@
 #dashboard-header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
   background-color: #ff4500;
   color: white;
   padding: 0.5em 1em;
@@ -17,6 +17,22 @@
   padding-left: 0.15em;
   font-family: "Roboto Slab", sans-serif;
 }
+
+#dashboard-header a {
+  font-size: 0.8rem;
+  margin: 1rem;
+  text-decoration: none;
+  color: var(--oscuro);
+  padding: 0.4rem 1rem;
+  background-color: var(--claro);
+  border: 0.2rem solid var(--oscuro);
+  border-radius: 5rem;
+  transition: 0.3s;
+  text-align: center;
+}
+
+
+
 
 #dashboard-container {
   display: flex;
