--- a/public/view/admin/admin.html
+++ b/public/view/admin/admin.html
@@ -29,16 +29,16 @@
         <button
           class="button"
           id="dashboard-btn"
-          onclick="window.location.href='../../index.html'"
+          onclick="window.location.href='../equipo/equipo.html'"
         >
-          <i class="fas fa-persons"></i> Nuestro equipo
+          <i class="fas fa-user-circle"></i> Nuestro equipo
         </button>
         <button
           class="button"
           id="dashboard-btn"
-          onclick="window.location.href='../../index.html'"
+          onclick="window.location.href='../gestionar-pedido/crear-pedido/crear-pedido.html'"
         >
-          <i class="fas fa-home"></i> ¡Haz tu pedido!
+          <i class="fas fa-credit-card"></i> ¡Haz tu pedido!
         </button>
         <button
           class="button"
