create: pedido crud

--- a/public/view/admin/admin.html
+++ b/public/view/admin/admin.html
@@ -31,7 +31,13 @@
           id="dashboard-btn"
           onclick="window.location.href='../equipo/equipo.html'"
         >
-          <i class="fas fa-user-circle"></i> Nuestro equipo
+          <i class="fas fa-user-circle"></i> Nuestro equipo</button
+        ><button
+          class="button"
+          id="dashboard-btn"
+          onclick="window.location.href='../gestionar-pedido/crear-pedido/index.html'"
+        >
+          <i class="fas fa-eye"></i> Ver facturas
         </button>
         <button
           class="button"
