--- a/public/assets/styles/standard.css
+++ b/public/assets/styles/standard.css
@@ -6,6 +6,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  background-color: #ede9e9;
+}
+
 button {
   cursor: pointer;
 }
@@ -34,6 +38,22 @@ button {
   padding-left: .3em;
   font-family: "Roboto Slab", sans-serif;
   color: #fff;
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#index-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  max-width: 1200px;
+  width: 100%;
 }
 
 /* Admin container */
@@ -85,8 +105,9 @@ button {
   background-color: white;
   border-radius: 0.625em;
   box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.1);
-  width: 12.5em;
+  width: 100%;
   margin: 1.25em;
+  padding: 1em;
   text-align: center;
   cursor: pointer;
   transition: transform 0.2s;
@@ -97,9 +118,14 @@ button {
 }
 
 .card-img {
-  width: 100%;
+  width: 10em;
   border-top-left-radius: 0.625em;
   border-top-right-radius: 0.625em;
+}
+
+.pizza-img {
+  width: 15em;
+  border-radius: 2em;
 }
 
 .card h2 {
